docs(perf): record GCP single-node owner window diagnosis